# ai-rag-chatbot-pdf

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  render.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  test_results.txt
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: middleware.py
backend/app/api/routes/: chat.py  health.py  ingest.py
backend/app/core/: contextual_compression.py  document_processor.py  embedder.py  guard.py  memory_store.py  query_expansion.py  rag_chain.py  vector_store.py
backend/app/data/faiss_index/: index.faiss  index.pkl
backend/app/models/: request.py  response.py
backend/app/utils/: logger.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  nginx.render.conf  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ChatWindow.jsx  MessageBubble.jsx  SimilarityBadge.jsx  SourceCitation.jsx  UploadPanel.jsx
frontend/src/hooks/: useChat.js  useSession.js
frontend/src/services/: api.js
frontend/src/styles/: index.css
